# comppsychflows

./: .gitattributes  MANIFEST.in  README.md  example_run_mnitobold.sh  setup.cfg  setup.py  template_run_mnitobold.sh
comppsychflows/: __about__.py  __init__.py  _version.py
comppsychflows/cli/: mnitobold.py
comppsychflows/interfaces/: __init__.py  afni.py
comppsychflows/workflows/: util.py
notebook/: example_of_running_mnitobids_on_swarm.ipynb  example_of_running_mnitobold_on_swarm.ipynb
