[metadata]
author = Dylan Nielson
author_email = dylan.nielson@gmail.com
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3.7
description = CompPsych Workflows provides processing tools for magnetic resonance images of the brain used and developed by the NIMH CompPsych Lab.
license_file = LICENSE
project_urls =
    GitHub = https://github.com/nimh-comppsych/comppsychflows
url = https://github.com/nimh-comppsych/comppsychflows

[options]
python_requires = >= 3.7
install_requires =
    attrs
    jinja2
    matplotlib >= 2.2.0
    nibabel >= 3.0.1
    nilearn >= 0.2.6, != 0.5.0, != 0.5.1
    nipype @ git+https://github.com/nipy/nipype.git@master
    nitransforms >= 20.0.0rc3,<20.2
    packaging
    pandas
    pybids >= 0.11.1
    PyYAML
    scikit-image
    scikit-learn
    scipy
    seaborn
    svgutils
    transforms3d
    templateflow >= 0.6
test_requires =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
packages = find:

[options.entry_points]
console_scripts =
    comppsychflows-mnitobold=comppsychflows.cli.mnitobold:main

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2, < 3.0
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit =
    duecredit
    citeproc-py != 0.5.0
pointclouds =
    pyntcloud
style =
    flake8 >= 3.7.0
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(pointclouds)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = comppsychflows/_version.py
versionfile_build = comppsychflows/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
exclude=*build/
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2

[coverage:run]
branch = True
omit =
    */tests/*
    niworkflows/_version.py
    niworkflows/conftest.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    raise NotImplementedError
    warnings\.warn